GitHub Action: Publish web log

--- a/2020-04-15-hello.html
+++ b/2020-04-15-hello.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Hello Chen Xi :D</title>
+    <title>Hello World</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="author" href="http://timaa2k.github.io" />
   </head>
   <body>
     <table>
       <tr>
-          <td><span class="desc"><a href="/2020-04-15-hello-history.html">Hello Chen Xi :D</a></span></td>
+          <td><span class="desc"><a href="/2020-04-15-hello-history.html">Hello World</a></span></td>
       </tr>
     </table>
     <hr>
