--- a/2020-04-15-hello.html
+++ b/2020-04-15-hello.html
@@ -23,7 +23,7 @@
         </div>
           <!-- Don't indent body, in case its content is whitespace-sensitive -->
       <div  class="e-content" >
-<p>.</p>
+<p><a href="https://youtu.be/StTqXEQ2l-Y?t=35s" title="Everything Is AWESOME"><img src="http://i.imgur.com/Ot5DWAW.png" alt="Everything Is AWESOME" /></a></p>
       </div>
     </div>
   </body>
